[tool.poetry]
name = "mojxml"
version = "0.2.0"
description = "法務省登記所備付地図データ（地図XML）を読みこむためのPythonライブラリおよび変換用コマンドラインツール"
authors = ["MIERUNE Inc. <info@mierune.co.jp>"]
readme = "README.md"
homepage = "https://github.com/MIERUNE/mojxml-py"
repository = "https://github.com/MIERUNE/mojxml-py"
license = "MIT"
packages = [{ include = "mojxml", from = "src" }]
include = [{ path = "tests", format = "sdist" }]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
]

[tool.poetry.scripts]
mojxml2ogr = 'mojxml.__main__:main'

[tool.poetry.dependencies]
python = ">=3.8.7,<4.0"
lxml = "^4.9.2"
pyproj = "^3.4.1"
shapely = "^2.0.1"
fiona = "^1.9.1"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.2.13"
flake8-docstrings = "^1.7.0"
flake8-pyproject = "^1.2.2"
isort = "^5.12.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pyright = "^1.1.298"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.flake8]
exclude = ".venv"
extend-select = "B950"
extend-ignore = "E203,E501,B008,D104,D400,D415"
max-line-length = 88
docstring-convention = "google"

[tool.pyright]
executionEnvironments = [{ root = "tests", extraPaths = ["src"] }]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = ["--import-mode=importlib"]

[tool.coverage.run]
source = ['mojxml']
concurrency = ["multiprocessing"]
