[tool.poetry]
name = "mojxml"
version = "0.5.0"
description = 'A tool for fast conversion of Japanese "MOJ Map XML" (land registration polygons) into geospatial formats.'
authors = ["MIERUNE Inc. <info@mierune.co.jp>"]
readme = "README.md"
homepage = "https://github.com/MIERUNE/mojxml-py"
repository = "https://github.com/MIERUNE/mojxml-py"
license = "MIT"
packages = [{ include = "mojxml", from = "src" }]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
]

[tool.poetry.scripts]
mojxml2ogr = 'mojxml.__main__:main'

[tool.poetry.dependencies]
python = ">=3.8.7,<4.0"
lxml = "^4.9.2"
pyproj = "^3.4.1"
fiona = "^1.9.1"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.0.0"
pyright = "^1.1.336"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["F", "E", "W", "B", "N", "I", "UP", "C90", "ANN"]
ignore = ["ANN101"]
target-version = "py38"

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN"]

[tool.pyright]
executionEnvironments = [{ root = "tests", extraPaths = ["src"] }]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = ["--import-mode=importlib"]

[tool.coverage.run]
source = ['mojxml']
concurrency = ["multiprocessing"]
