[project]
name = "mojxml"
version = "0.5.1"
description = 'A tool for fast conversion of Japanese "MOJ Map XML" (land registration polygons) into geospatial formats.'
authors = [
    { name = "Taku Fukada", email = "naninunenor@gmail.com" },
    { name = "MIERUNE Inc.", email = "info@mierune.co.jp" },
]
readme = "README.md"
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
]
requires-python = ">=3.9.0"
dependencies = [
    "lxml>=4.9.2",
    "fiona>=1.10.0",
    "click>=8.1.8",
    "pyproj>=3.6.1",
]

[project.urls]
Homepage = "https://github.com/MIERUNE/mojxml-py"
Repository = "https://github.com/MIERUNE/mojxml-py"

[project.scripts]
mojxml2ogr = 'mojxml.__main__:main'

[dependency-groups]
dev = [
    "pyqt5-stubs>=5.15.6.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
    "pyright>=1.1.392.post0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = ["F", "E", "W", "B", "N", "I", "UP", "C90", "ANN"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.pyright]
executionEnvironments = [{ root = "tests", extraPaths = ["src"] }]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = ["--import-mode=importlib"]

[tool.coverage.run]
source = ['mojxml']
concurrency = ["multiprocessing"]
